compiler/testData/cli/jvm/apiVersion.out
compiler/testData/cli/jvm/apiVersion.kt:2:15: error: unresolved reference: sealedSubclasses
    ""::class.sealedSubclasses
              ^
COMPILATION_ERROR
